--- a/src/index.html
+++ b/src/index.html
@@ -19,40 +19,53 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Brand</a>
+        <a class="navbar-brand" href="#">Meghan Stinnett</a>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Skills</a></li>
+        </ul>
       </div>
 
-<div class="header">
-<h1>Meghan Stinnett</h1>
-<h2>Front-end Developer</h2>
-</div>
+      <div class="header">
+      <h1>Meghan Stinnett</h1>
+      <h2>Front-end Developer</h2>
+      </div>
 
-<div class="tagline">
-<h3>I may be an industry noob, but given a chance you will see my gear is epic!</h3>
-<p>Yup</p>
-</div>
+      <div class="tagline">
+      <h3>I may be a corporate noob, but given a chance you will see my gear is epic</h3>
+      <p>I live to dive into all the code! I don't even want to towel off after!</p>
+      </div>
 
-<div class="skills">
-<h3>I got the skills</h3>
-<ul>
-<li>HTML</li>
-<li>CSS</li>
-<li>Bootstrap</li>
-<li>JavaScript</li>
-<li>Responsive Web Design</li>
-<li>WordPress</li>
-</ul>
+      <div class="skills">
+      <h3>I got the skills</h3>
+      <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Bootstrap</li>
+      <li>JavaScript</li>
+      <li>Responsive Web Design</li>
+      <li>WordPress</li>
+      </ul>
 
-<div class="badges">
-  <h3>Badges I have earned</h3>
-</div>
+      <div class="badges">
+        <h3>Badges I have earned</h3>
+      </div>
 
-<div class="contact">
-<h3>Reach out</h3>
-<p><a href="https://www.linkedin.com/in/meghan-stinnett-0b14ba8">LinkedIn</a></p>
-<p>Phone: (406) 273-8140</p>
-<p>email: narcolepticoneone@yahoo.com</p>
+      <div class="contact">
+      <h3>Reach out</h3>
+      <p><a href="https://www.linkedin.com/in/meghan-stinnett-0b14ba8">LinkedIn</a></p>
+      <p>Phone: (406) 273-8140</p>
+      <p>email: narcolepticoneone@yahoo.com</p>
+      </div>
+  <!--
+    Previous project placeholder ends
+    (unused pieces will be deleted at the last task)
+  -->
 
-</div>
+
+  <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 </body>
 </html>
