--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,9 @@
         </button>
         <a class="navbar-brand" href="#">Meghan Stinnett</a>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Skills</a></li>
+          <li><a href="home">Home</a></li>
+          <li><a href="about">About</a></li>
+          <li><a href="skills">Skills</a></li>
         </ul>
       </div>
 
