--- a/src/index.html
+++ b/src/index.html
@@ -20,12 +20,16 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="#">Meghan Stinnett</a>
-        <ul>
-          <li><a href="home">Home</a></li>
-          <li><a href="about">About</a></li>
-          <li><a href="skills">Skills</a></li>
-        </ul>
       </div>
+
+      <div class="collapse navbar-collapse" id="portfolio-collapse-menu">
+      <ul class="nav navbar-nav">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Skills</a></li>
+        <li><a href="#">Badges</a></li>
+      </ul>
+    </div>
 
       <div class="header">
       <h1>Meghan Stinnett</h1>
