--- a/index.html
+++ b/index.html
@@ -20,38 +20,81 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="#">Meghan Stinnett</a>
-        <ul>
-          <li>Home</li>
-          <li>About</li>
-          <li>Skills</li>
-        </ul>
       </div>
 
-  <div class="header">
-    <h1>Morgan McCircuit</h1>
-    <h2>I write code</h2>
+      <div class="collapse navbar-collapse" id="portfolio-collapse-menu">
+      <ul class="nav navbar-nav">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Skills</a></li>
+        <li><a href="#">Badges</a></li>
+      </ul>
+    </div>
+
+    <div id="portfolio-carousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#portfolio-carousel" data-slide-to="0" class="active"></li>
+    <li data-target="#portfolio-carousel" data-slide-to="1"></li>
+    <li data-target="#portfolio-carousel" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <div class="container">
+        <div class="carousel-caption">
+          <h1>Meghan Stinnett</h1>
+          <p>Front End Developer</p>
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <div class="container">
+        <div class="carousel-caption">
+          <h1>Something to Know</h1>
+          <p>I may not have been on all the raids, but my gear is more than epic enough for the toughest boss!</p>
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <div class="container">
+        <div class="carousel-caption">
+          <h1>My Reasons for Coding</h1>
+          <p>Logic. Plain and simple. There is only logic and order in code - every keystroke holds its own meaning and result.</p>
+        </div>
+      </div>
+    </div>
   </div>
+  <a class="left carousel-control" href="#portfolio-carousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#portfolio-carousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 
-  <div class="tagline">
-    <h3>Who I am</h3>
-    <p>Hi, my name is Morgan and I love to write code that is efficient.</p>
-  </div>
-
-
-  <div class="skills">
-    <h3>What I do</h3>
-    <p>Here are some of the languages I use on a day-to-day.</p>
-    <ul>
+      <div class="skills">
+      <h3>I got the skills</h3>
+      <ul>
       <li>HTML</li>
       <li>CSS</li>
+      <li>Bootstrap</li>
       <li>JavaScript</li>
-    </ul>
-  </div>
+      <li>Responsive Web Design</li>
+      <li>WordPress</li>
+      </ul>
 
-  <div class="contact">
-    <h3>Get in touch</h3>
-    <p>I live in the cloud and can't be seen. Send messages to the good people at <a target="_blank" href="https://twitter.com/codeschool">Code School</a> and they'll notify me.</p>
-  </div>
+      <div class="badges">
+        <h3>Badges I have earned</h3>
+      </div>
+
+      <div class="contact">
+      <h3>Reach out</h3>
+      <p><a href="https://www.linkedin.com/in/meghan-stinnett-0b14ba8">LinkedIn</a></p>
+      <p>Phone: (406) 273-8140</p>
+      <p>email: narcolepticoneone@yahoo.com</p>
+      </div>
   <!--
     Previous project placeholder ends
     (unused pieces will be deleted at the last task)
