--- a/src/index.html
+++ b/src/index.html
@@ -31,15 +31,48 @@
       </ul>
     </div>
 
-      <div class="header">
-      <h1>Meghan Stinnett</h1>
-      <h2>Front-end Developer</h2>
+    <div id="portfolio-carousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#portfolio-carousel" data-slide-to="0" class="active"></li>
+    <li data-target="#portfolio-carousel" data-slide-to="1"></li>
+    <li data-target="#portfolio-carousel" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <div class="container">
+        <div class="carousel-caption">
+          <h1>Meghan Stinnett</h1>
+          <p>Front End Developer</p>
+        </div>
       </div>
-
-      <div class="tagline">
-      <h3>I may be a corporate noob, but given a chance you will see my gear is epic</h3>
-      <p>I live to dive into all the code! I don't even want to towel off after!</p>
+    </div>
+    <div class="item">
+      <div class="container">
+        <div class="carousel-caption">
+          <h1>Something to Know</h1>
+          <p>I may not have been on all the raids, but my gear is more than epic enough for the toughest boss!</p>
+        </div>
       </div>
+    </div>
+    <div class="item">
+      <div class="container">
+        <div class="carousel-caption">
+          <h1>My Reasons for Coding</h1>
+          <p>Logic. Plain and simple. There is only logic and order in code - every keystroke holds its own meaning and result.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <a class="left carousel-control" href="#portfolio-carousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#portfolio-carousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 
       <div class="skills">
       <h3>I got the skills</h3>
