--- a/src/index.html
+++ b/src/index.html
@@ -74,16 +74,16 @@
   </a>
 </div>
 
-      <div class="skills">
-      <h3>I got the skills</h3>
-      <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>Bootstrap</li>
-      <li>JavaScript</li>
-      <li>Responsive Web Design</li>
-      <li>WordPress</li>
-      </ul>
+<div class="marketing">
+  <div class='container'>
+    <div class='row'>
+      <div class="col-md-4"><span class="glyphicon glyphicon-briefcase"><h2>HTML, CSS and BootStrap</h2><p>My briefcase is full of skills to bring what you see in your head to life on screen.</span></div>
+      <div class="col-md-4"><span class="glyphicon glyphicon-wrench"><h2>JavaScript</h2><p>The tools to add functionality to your sites.</span></div>
+      <div class="col-md-4"><span class="glyphicon glyphicon-coffee-phone"><h2>Responsive Design</h2><p>What is a "standard" sized screen anyway? We are a mobile culture and your site should e accessible on mobile devices.</span></div>
+    </div>
+  </div>
+</div>
+
 
       <div class="badges">
         <h3>Badges I have earned</h3>
