--- a/src/index.html
+++ b/src/index.html
@@ -84,12 +84,8 @@
   </div>
 </div>
 
-
-      <div class="badges">
-        <h3>Badges I have earned</h3>
-      </div>
-
-      <div class="contact">
+<footer>
+  <div class='contaner'>
       <h3>Reach out</h3>
       <p><a href="https://www.linkedin.com/in/meghan-stinnett-0b14ba8">LinkedIn</a></p>
       <p>Phone: (406) 273-8140</p>
