--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
   </div>
 </div>
 
-<div id='footer'>
+<div class='footer'>
   <div class='contaner'>
       <h3>Reach out</h3>
       <p><a href="https://www.linkedin.com/in/meghan-stinnett-0b14ba8">LinkedIn</a></p>
