--- a/src/index.html
+++ b/src/index.html
@@ -84,14 +84,14 @@
   </div>
 </div>
 
-<div id='footer'>
+<footer class='footer'>
   <div class='contaner'>
       <h3>Reach out</h3>
       <p><a href="https://www.linkedin.com/in/meghan-stinnett-0b14ba8">LinkedIn</a></p>
       <p>Phone: (406) 273-8140</p>
       <p>email: narcolepticoneone@yahoo.com</p>
       </div>
-    </div>
+    </footer>
   <!--
     Previous project placeholder ends
     (unused pieces will be deleted at the last task)
