--- a/src/index.html
+++ b/src/index.html
@@ -77,21 +77,21 @@
 <div class="marketing">
   <div class='container'>
     <div class='row'>
-      <div class="col-md-4"><span class="glyphicon glyphicon-briefcase"><h2>HTML, CSS and BootStrap</h2><p>My briefcase is full of skills to bring what you see in your head to life on screen.</span></div>
-      <div class="col-md-4"><span class="glyphicon glyphicon-wrench"><h2>JavaScript</h2><p>The tools to add functionality to your sites.</span></div>
-      <div class="col-md-4"><span class="glyphicon glyphicon-coffee-phone"><h2>Responsive Design</h2><p>What is a "standard" sized screen anyway? We are a mobile culture and your site should e accessible on mobile devices.</span></div>
+      <div class="col-md-4"><span class="glyphicon glyphicon-briefcase"><h3>HTML, CSS and BootStrap</h3><p>My briefcase is full of skills to bring what you see in your head to life on screen.</p></span></div>
+      <div class="col-md-4"><span class="glyphicon glyphicon-wrench"><h3>JavaScript</h3><p>The tools to add functionality to your sites.</p></span></div>
+      <div class="col-md-4"><span class="glyphicon glyphicon-phone"><h3>Responsive Design</h3><p>What is a "standard" sized screen anyway? We are a mobile culture and your site should e accessible on mobile devices.</p></span></div>
     </div>
   </div>
 </div>
 
-<footer class='footer'>
+<div id='footer'>
   <div class='contaner'>
       <h3>Reach out</h3>
       <p><a href="https://www.linkedin.com/in/meghan-stinnett-0b14ba8">LinkedIn</a></p>
       <p>Phone: (406) 273-8140</p>
       <p>email: narcolepticoneone@yahoo.com</p>
       </div>
-    </footer>
+    </div>
   <!--
     Previous project placeholder ends
     (unused pieces will be deleted at the last task)
