--- a/index.html
+++ b/index.html
@@ -74,27 +74,24 @@
   </a>
 </div>
 
-      <div class="skills">
-      <h3>I got the skills</h3>
-      <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>Bootstrap</li>
-      <li>JavaScript</li>
-      <li>Responsive Web Design</li>
-      <li>WordPress</li>
-      </ul>
+<div class="marketing">
+  <div class='container'>
+    <div class='row'>
+      <div class="col-md-4"><span class="glyphicon glyphicon-briefcase"><h2>HTML, CSS and BootStrap</h2><p>My briefcase is full of skills to bring what you see in your head to life on screen.</p></span></div>
+      <div class="col-md-4"><span class="glyphicon glyphicon-wrench"><h2>JavaScript</h2><p>The tools to add functionality to your sites.</p></span></div>
+      <div class="col-md-4"><span class="glyphicon glyphicon-phone"><h2>Responsive Design</h2><p>What is a "standard" sized screen anyway? We are a mobile culture and your site should e accessible on mobile devices.</p></span></div>
+    </div>
+  </div>
+</div>
 
-      <div class="badges">
-        <h3>Badges I have earned</h3>
-      </div>
-
-      <div class="contact">
+<div class='footer'>
+  <div class='contaner'>
       <h3>Reach out</h3>
       <p><a href="https://www.linkedin.com/in/meghan-stinnett-0b14ba8">LinkedIn</a></p>
       <p>Phone: (406) 273-8140</p>
       <p>email: narcolepticoneone@yahoo.com</p>
       </div>
+    </div>
   <!--
     Previous project placeholder ends
     (unused pieces will be deleted at the last task)
