--- a/src/index.html
+++ b/src/index.html
@@ -77,19 +77,20 @@
 <div class="marketing">
   <div class='container'>
     <div class='row'>
-      <div class="col-md-4"><span class="glyphicon glyphicon-briefcase"><h2>HTML, CSS and BootStrap</h2><p>My briefcase is full of skills to bring what you see in your head to life on screen.</p></span></div>
-      <div class="col-md-4"><span class="glyphicon glyphicon-wrench"><h2>JavaScript</h2><p>The tools to add functionality to your sites.</p></span></div>
-      <div class="col-md-4"><span class="glyphicon glyphicon-phone"><h2>Responsive Design</h2><p>What is a "standard" sized screen anyway? We are a mobile culture and your site should e accessible on mobile devices.</p></span></div>
+      <div class="col-md-4"><span class="glyphicon glyphicon-briefcase"></span><h2>HTML, CSS and BootStrap</h2><p>My briefcase is full of skills to bring what you see in your head to life on screen.</p></div>
+      <div class="col-md-4"><span class="glyphicon glyphicon-wrench"></span><h2>JavaScript</h2><p>The tools to add functionality to your sites.</p></div>
+      <div class="col-md-4"><span class="glyphicon glyphicon-phone"></span><h2>Responsive Design</h2><p>What is a "standard" sized screen anyway? We are a mobile culture and your site should be accessible on mobile devices.</p></div>
     </div>
   </div>
 </div>
 
+<div id='footer'>
 <div class='contaner'>
       <h3>Reach out</h3>
       <p><a href="https://www.linkedin.com/in/meghan-stinnett-0b14ba8">LinkedIn</a></p>
-      <p>Phone: (406) 273-8140</p>
-      <p>email: narcolepticoneone@yahoo.com</p>
-      
+      <p>(406) 273-8140</p>
+      <a href=mailto:narcolepticoneone@yahoo.com>Email Me</a>
+    </div>
     </div>
   <!--
     Previous project placeholder ends
