--- a/src/index.html
+++ b/src/index.html
@@ -84,12 +84,12 @@
   </div>
 </div>
 
-<div id="footer">
+<footer>
 <div class="container">
       <h3>Reach out</h3>
       <p><a href="https://www.linkedin.com/in/meghan-stinnett-0b14ba8">LinkedIn</a> (406) 273-8140 <a href=mailto:narcolepticoneone@yahoo.com>Email Me</a>
     </div>
-    </div>
+  </footer>
   <!--
     Previous project placeholder ends
     (unused pieces will be deleted at the last task)
